# cs4532_concurrent_programming_lab_01

./: CMakeLists.txt  README.md  file_writer.c  file_writer.h  linked_list.c  linked_list.h  main.c  mutex.c  mutex.h  rwlock.c  rwlock.h  serial.c  serial.h
output/: case_1_serial.csv  out.csv
